Final commit of net ninja blog web site

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,24 +1,8 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title ></title>
-</head>
+<% include('./partials/head.ejs') %>
 <body>
     
-    <nav>
-        <div class="site-title">
-            <a href="/">
-                <h1>Blog Ninja</h1>
-            </a>
-            <p>A Net Ninja Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <% include('./partials/nav.ejs') %>
 
     <div class="about content">
         <h2>About us</h2>
@@ -26,6 +10,6 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, reiciendis eum, eligendi fugiat ad nam deserunt suscipit earum eveniet molestiae animi corporis quis esse repellendus quisquam vel expedita doloribus iure!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nostrum alias magni rem sed odit cupiditate accusamus dolorem recusandae ad voluptatum, magnam accusantium ipsa laudantium quae consequuntur fugit architecto distinctio.</p>
     </div>
-
+    <% include('./partials/footer.ejs') %>
 </body>
 </html> 
